@@ -38,6 +38,7 @@
 #define MPD_QUEUE_H
 
 #include "compiler.h"
+#include "position.h"
 #include "tag.h"
 
 #include <stdbool.h>
@@ -254,6 +255,20 @@ mpd_send_add_id_to(struct mpd_connection *connection, const char *uri,
 		   unsigned to);
 
 /**
+ * Inserts a song into the playlist for a given position, and returns its id.
+ * file is always a single file or URL.
+ *
+ * @param connection the connection to MPD
+ * @param uri the URI of the song to be added
+ * @param to the desired position of the song
+ * @param whence how to interpret the position parameter
+ * @return true on success, false on error
+ */
+bool
+mpd_send_add_id_whence(struct mpd_connection *connection, const char *uri,
+		   unsigned to, enum mpd_position_whence whence);
+
+/**
  * Returns the id of the new song in the playlist.  To be called after
  * mpd_send_add_id() or mpd_send_add_id_to().
  *
@@ -286,6 +301,20 @@ mpd_run_add_id(struct mpd_connection *connection, const char *file);
 int
 mpd_run_add_id_to(struct mpd_connection *connection, const char *uri,
 		  unsigned to);
+
+/**
+ * Executes the "addid" command and reads the response.
+ * file is always a single file or URL.
+ *
+ * @param connection the connection to MPD
+ * @param uri the URI of the song to be added
+ * @param to the desired position of the song
+ * @param whence how to interpret the position parameter
+ * @return the new song id, -1 on error or if MPD did not send an id
+ */
+int
+mpd_run_add_id_whence(struct mpd_connection *connection, const char *uri,
+		  unsigned to, enum mpd_position_whence whence);
 
 /**
  * Deletes a song from the queue.
