@@ -70,6 +70,10 @@ mpd_send_u_s_command(struct mpd_connection *connection, const char *command,
 		     unsigned arg1, const char *arg2);
 
 bool
+mpd_send_s_s_command(struct mpd_connection *connection, const char *command,
+		       const char *arg1, const char *arg2);
+
+bool
 mpd_send_u_s_s_command(struct mpd_connection *connection, const char *command,
 		       unsigned arg1, const char *arg2, const char *arg3);
 
