@@ -195,6 +195,30 @@ mpd_send_add_id_to(struct mpd_connection *connection, const char *uri,
 	return mpd_send_s_u_command(connection, "addid", uri, to);
 }
 
+bool
+mpd_send_add_id_whence(struct mpd_connection *connection, const char *uri,
+		   unsigned to, enum mpd_position_whence whence)
+{
+	const char *whence_s = "";
+	switch (whence) {
+	case MPD_POSITION_ABSOLUTE:
+		break;
+
+	case MPD_POSITION_AFTER_CURRENT:
+		whence_s = "+";
+		break;
+
+	case MPD_POSITION_BEFORE_CURRENT:
+		whence_s = "-";
+		break;
+	}
+
+	char to_str[64] = "";
+	snprintf(to_str, 64, " position %s%u", whence_s, to);
+
+	return mpd_send_s_s_command(connection, "addid", uri, to_str);
+}
+
 int
 mpd_recv_song_id(struct mpd_connection *connection)
 {
@@ -235,6 +259,24 @@ mpd_run_add_id_to(struct mpd_connection *connection, const char *uri,
 
 	if (!mpd_run_check(connection) ||
 	    !mpd_send_add_id_to(connection, uri, to))
+		return -1;
+
+	id = mpd_recv_song_id(connection);
+
+	if (!mpd_response_finish(connection))
+		id = -1;
+
+	return id;
+}
+
+int
+mpd_run_add_id_whence(struct mpd_connection *connection, const char *uri,
+		  unsigned to, enum mpd_position_whence whence)
+{
+	int id;
+
+	if (!mpd_run_check(connection) ||
+	    !mpd_send_add_id_whence(connection, uri, to, whence))
 		return -1;
 
 	id = mpd_recv_song_id(connection);
